BraKetParser.py
# Generated from BraKet.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BraKetParser ( Parser ):

    grammarFileName = "BraKet.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "'from'", "'import'", 
                     "'const'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'return'", 
                     "'if'", "'elif'", "'else'", "'for'", "'while'", "'do'", 
                     "'true'", "'false'", "'main'", "'func'", "'+'", "'-'", 
                     "'*'", "'/'", "'**'", "'%'", "'='", "'>'", "'<'", "'>='", 
                     "'<='", "'=='", "'!='", "'||'", "'&&'", "'!'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'@'", "';'", "'.'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "WS", "FROM", "IMPORT", "CONST", 
                      "KET_IDENTIFIER", "BRA_IDENTIFIER", "INT", "FLOAT", 
                      "CHAR", "STRING", "COMPLEX", "RETURN", "IF", "ELIF", 
                      "ELSE", "FOR", "WHILE", "DO", "BOOL_TRUE", "BOOL_FALSE", 
                      "MAIN", "FUNC", "ADD", "SUB", "MUL", "DIV", "EXP", 
                      "MOD", "ASSIGN", "GT", "LT", "GTE", "LTE", "EQ", "NEQ", 
                      "LOGICAL_OR", "LOGICAL_AND", "NEG", "LPAREN", "RPAREN", 
                      "LSQUARE", "RSQUARE", "LCURLY", "RCURLY", "TENSOR", 
                      "SEMICOLON", "DOT", "IDENTIFIER" ]

    RULE_program = 0
    RULE_import_list = 1
    RULE_import_statement = 2
    RULE_func_list = 3
    RULE_const_decl_list = 4
    RULE_const_decl = 5
    RULE_var_decl_list = 6
    RULE_var_decl = 7
    RULE_value = 8
    RULE_braket_vector = 9
    RULE_braket_expression = 10
    RULE_braket_term = 11
    RULE_braket_factor = 12
    RULE_array = 13
    RULE_struct = 14
    RULE_struct_value = 15
    RULE_op = 16
    RULE_statement_list = 17
    RULE_statement = 18
    RULE_assign_statement = 19
    RULE_func_call_statement = 20
    RULE_arg_list = 21
    RULE_arg = 22
    RULE_return_statement = 23
    RULE_if_statement = 24
    RULE_elif = 25
    RULE_else = 26
    RULE_for_statement = 27
    RULE_while_statement = 28
    RULE_do_statement = 29
    RULE_expression = 30
    RULE_string_expression = 31
    RULE_num_expression = 32
    RULE_num_term = 33
    RULE_num_factor = 34
    RULE_array_access = 35
    RULE_struct_access = 36
    RULE_dirac_expression = 37
    RULE_num_comp = 38
    RULE_eq_comp = 39
    RULE_bool_expression = 40
    RULE_bool_or = 41
    RULE_bool_and = 42
    RULE_bool_cmp = 43
    RULE_bool_unary = 44
    RULE_bool_primary = 45
    RULE_func_decl_list = 46
    RULE_func_decl = 47
    RULE_param_list = 48
    RULE_identifier_list = 49
    RULE_default_list = 50
    RULE_main_function = 51

    ruleNames =  [ "program", "import_list", "import_statement", "func_list", 
                   "const_decl_list", "const_decl", "var_decl_list", "var_decl", 
                   "value", "braket_vector", "braket_expression", "braket_term", 
                   "braket_factor", "array", "struct", "struct_value", "op", 
                   "statement_list", "statement", "assign_statement", "func_call_statement", 
                   "arg_list", "arg", "return_statement", "if_statement", 
                   "elif", "else", "for_statement", "while_statement", "do_statement", 
                   "expression", "string_expression", "num_expression", 
                   "num_term", "num_factor", "array_access", "struct_access", 
                   "dirac_expression", "num_comp", "eq_comp", "bool_expression", 
                   "bool_or", "bool_and", "bool_cmp", "bool_unary", "bool_primary", 
                   "func_decl_list", "func_decl", "param_list", "identifier_list", 
                   "default_list", "main_function" ]

    EOF = Token.EOF
    COMMA=1
    WS=2
    FROM=3
    IMPORT=4
    CONST=5
    KET_IDENTIFIER=6
    BRA_IDENTIFIER=7
    INT=8
    FLOAT=9
    CHAR=10
    STRING=11
    COMPLEX=12
    RETURN=13
    IF=14
    ELIF=15
    ELSE=16
    FOR=17
    WHILE=18
    DO=19
    BOOL_TRUE=20
    BOOL_FALSE=21
    MAIN=22
    FUNC=23
    ADD=24
    SUB=25
    MUL=26
    DIV=27
    EXP=28
    MOD=29
    ASSIGN=30
    GT=31
    LT=32
    GTE=33
    LTE=34
    EQ=35
    NEQ=36
    LOGICAL_OR=37
    LOGICAL_AND=38
    NEG=39
    LPAREN=40
    RPAREN=41
    LSQUARE=42
    RSQUARE=43
    LCURLY=44
    RCURLY=45
    TENSOR=46
    SEMICOLON=47
    DOT=48
    IDENTIFIER=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BraKetParser.EOF, 0)

        def import_list(self):
            return self.getTypedRuleContext(BraKetParser.Import_listContext,0)


        def const_decl_list(self):
            return self.getTypedRuleContext(BraKetParser.Const_decl_listContext,0)


        def func_decl_list(self):
            return self.getTypedRuleContext(BraKetParser.Func_decl_listContext,0)


        def main_function(self):
            return self.getTypedRuleContext(BraKetParser.Main_functionContext,0)


        def getRuleIndex(self):
            return BraKetParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BraKetParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==4:
                self.state = 104
                self.import_list()


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 107
                self.const_decl_list()


            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 110
                self.func_decl_list()


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 113
                self.main_function()


            self.state = 116
            self.match(BraKetParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BraKetParser.Import_statementContext)
            else:
                return self.getTypedRuleContext(BraKetParser.Import_statementContext,i)


        def getRuleIndex(self):
            return BraKetParser.RULE_import_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_list" ):
                return visitor.visitImport_list(self)
            else:
                return visitor.visitChildren(self)




    def import_list(self):

        localctx = BraKetParser.Import_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.import_statement()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==4:
                self.state = 119
                self.import_statement()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(BraKetParser.FROM, 0)

        def IDENTIFIER(self):
            return self.getToken(BraKetParser.IDENTIFIER, 0)

        def IMPORT(self):
            return self.getToken(BraKetParser.IMPORT, 0)

        def func_list(self):
            return self.getTypedRuleContext(BraKetParser.Func_listContext,0)


        def getRuleIndex(self):
            return BraKetParser.RULE_import_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_statement" ):
                return visitor.visitImport_statement(self)
            else:
                return visitor.visitChildren(self)




    def import_statement(self):

        localctx = BraKetParser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_statement)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(BraKetParser.FROM)
                self.state = 126
                self.match(BraKetParser.IDENTIFIER)
                self.state = 127
                self.match(BraKetParser.IMPORT)
                self.state = 128
                self.func_list()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(BraKetParser.IMPORT)
                self.state = 130
                self.match(BraKetParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(BraKetParser.IDENTIFIER)
            else:
                return self.getToken(BraKetParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BraKetParser.COMMA)
            else:
                return self.getToken(BraKetParser.COMMA, i)

        def getRuleIndex(self):
            return BraKetParser.RULE_func_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_list" ):
                return visitor.visitFunc_list(self)
            else:
                return visitor.visitChildren(self)




    def func_list(self):

        localctx = BraKetParser.Func_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BraKetParser.IDENTIFIER)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 134
                self.match(BraKetParser.COMMA)
                self.state = 135
                self.match(BraKetParser.IDENTIFIER)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BraKetParser.Const_declContext)
            else:
                return self.getTypedRuleContext(BraKetParser.Const_declContext,i)


        def getRuleIndex(self):
            return BraKetParser.RULE_const_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl_list" ):
                return visitor.visitConst_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def const_decl_list(self):

        localctx = BraKetParser.Const_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_const_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 141
                self.const_decl()
                self.state = 144 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(BraKetParser.CONST, 0)

        def var_decl(self):
            return self.getTypedRuleContext(BraKetParser.Var_declContext,0)


        def getRuleIndex(self):
            return BraKetParser.RULE_const_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = BraKetParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(BraKetParser.CONST)
            self.state = 147
            self.var_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BraKetParser.Var_declContext)
            else:
                return self.getTypedRuleContext(BraKetParser.Var_declContext,i)


        def getRuleIndex(self):
            return BraKetParser.RULE_var_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl_list" ):
                return visitor.visitVar_decl_list(self)
            else:
                return visitor.visitChildren(self)




    def var_decl_list(self):

        localctx = BraKetParser.Var_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 149
                self.var_decl()
                self.state = 152 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 562949953421504) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BraKetParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(BraKetParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(BraKetParser.ExpressionContext,0)


        def KET_IDENTIFIER(self):
            return self.getToken(BraKetParser.KET_IDENTIFIER, 0)

        def BRA_IDENTIFIER(self):
            return self.getToken(BraKetParser.BRA_IDENTIFIER, 0)

        def getRuleIndex(self):
            return BraKetParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = BraKetParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_decl)
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [49]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(BraKetParser.IDENTIFIER)
                self.state = 155
                self.match(BraKetParser.ASSIGN)
                self.state = 156
                self.expression()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(BraKetParser.KET_IDENTIFIER)
                self.state = 158
                self.match(BraKetParser.ASSIGN)
                self.state = 159
                self.expression()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                self.match(BraKetParser.BRA_IDENTIFIER)
                self.state = 161
                self.match(BraKetParser.ASSIGN)
                self.state = 162
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(BraKetParser.INT, 0)

        def FLOAT(self):
            return self.getToken(BraKetParser.FLOAT, 0)

        def CHAR(self):
            return self.getToken(BraKetParser.CHAR, 0)

        def STRING(self):
            return self.getToken(BraKetParser.STRING, 0)

        def array(self):
            return self.getTypedRuleContext(BraKetParser.ArrayContext,0)


        def struct(self):
            return self.getTypedRuleContext(BraKetParser.StructContext,0)


        def COMPLEX(self):
            return self.getToken(BraKetParser.COMPLEX, 0)

        def op(self):
            return self.getTypedRuleContext(BraKetParser.OpContext,0)


        def BOOL_FALSE(self):
            return self.getToken(BraKetParser.BOOL_FALSE, 0)

        def BOOL_TRUE(self):
            return self.getToken(BraKetParser.BOOL_TRUE, 0)

        def getRuleIndex(self):
            return BraKetParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = BraKetParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(BraKetParser.INT)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(BraKetParser.FLOAT)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(BraKetParser.CHAR)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 168
                self.match(BraKetParser.STRING)
                pass
            elif token in [42]:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.array()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 6)
                self.state = 170
                self.struct()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 171
                self.match(BraKetParser.COMPLEX)
                pass
            elif token in [40]:
                self.enterOuterAlt(localctx, 8)
                self.state = 172
                self.op()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 9)
                self.state = 173
                self.match(BraKetParser.BOOL_FALSE)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 10)
                self.state = 174
                self.match(BraKetParser.BOOL_TRUE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Braket_vectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(BraKetParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(BraKetParser.RPAREN, 0)

        def braket_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BraKetParser.Braket_expressionContext)
            else:
                return self.getTypedRuleContext(BraKetParser.Braket_expressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BraKetParser.COMMA)
            else:
                return self.getToken(BraKetParser.COMMA, i)

        def getRuleIndex(self):
            return BraKetParser.RULE_braket_vector

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraket_vector" ):
                return visitor.visitBraket_vector(self)
            else:
                return visitor.visitChildren(self)




    def braket_vector(self):

        localctx = BraKetParser.Braket_vectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_braket_vector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(BraKetParser.LPAREN)

            self.state = 178
            self.braket_expression()
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 179
                self.match(BraKetParser.COMMA)
                self.state = 180
                self.braket_expression()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            self.match(BraKetParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Braket_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def braket_term(self):
            return self.getTypedRuleContext(BraKetParser.Braket_termContext,0)


        def ADD(self):
            return self.getToken(BraKetParser.ADD, 0)

        def braket_expression(self):
            return self.getTypedRuleContext(BraKetParser.Braket_expressionContext,0)


        def SUB(self):
            return self.getToken(BraKetParser.SUB, 0)

        def getRuleIndex(self):
            return BraKetParser.RULE_braket_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBraket_expression" ):
                return visitor.visitBraket_expression(self)
            else:
                return visitor.visitChildren(self)




    def braket_expression(self):

        localctx = BraKetParser.Braket_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_braket_expression)
        try:
            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.braket_term()
                self.state = 189
                self.match(BraKetParser.ADD)
                self.state = 190
                self.braket_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.braket_term()
                self.state = 193
                self.match(BraKetParser.SUB)
                self.state = 194
                self.braket_expression()
                pass
